Fix: POST to api.seobandwagon.com (production)

--- a/index.html
+++ b/index.html
@@ -1631,7 +1631,7 @@
             };
             
             try {
-                const response = await fetch('https://api.seobandwagon.dev/contact', {
+                const response = await fetch('https://api.seobandwagon.com/contact', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
